client/src/components/CategoryCase/style.css
.category-case {
  margin-bottom: 1.5rem;
}

.category-case__item-container {
  border-bottom: 2px solid var(--color-theme);
  border-top: 2px solid var(--color-theme);
  display: flex;
  overflow-x: auto;
}

.category-case__item-container::-webkit-scrollbar {
  display: none;
}

.category-case__item-container > * {
  flex-shrink: 0;
}

.category-case__title {
  margin: 0 0 .5rem .75rem
}

